objects/Email__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Emails</relationshipLabel>
        <relationshipName>Emails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accurint</fullName>
                </value>
                <value>
                    <fullName>CLEAR</fullName>
                </value>
                <value>
                    <fullName>Current Test Vendor</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google Search</fullName>
                </value>
                <value>
                    <fullName>Linkedin</fullName>
                </value>
                <value>
                    <fullName>Neustar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Email #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>